# ubuntu-blockchain

./: .clang-format  .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  HONEST_README.md  IMPLEMENTATION_STATUS.md  LICENSE  PEG_MODULE_IMPLEMENTATION.md  PHASE_6_AUDIT_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_TODAY.md  SECURITY.md  STATUS_REPORT.md  build.sh  docker-compose.yml  test-compilation.sh  ubuntu.conf.example  vcpkg.json
contrib/systemd/: ubud.service
docs/: API.md  AZURE_DEPLOYMENT.md  DEPLOYMENT.md  PEG_INTEGRATION_PATCH.md  SECURITY_AUDIT.md  peg_module.md
include/ubuntu/config/: config.h
include/ubuntu/consensus/: chainparams.h  pow.h
include/ubuntu/core/: block.h  chain.h  merkle.h  transaction.h
include/ubuntu/crypto/: base58.h  hash.h  keys.h  signatures.h
include/ubuntu/ledger/: ledger_adapter.h
include/ubuntu/mempool/: fee_estimator.h  mempool.h
include/ubuntu/metrics/: metrics.h
include/ubuntu/mining/: block_assembler.h
include/ubuntu/monetary/: oracle_interface.h  peg_controller.h  peg_state.h
include/ubuntu/network/: message_auth.h  network_manager.h  peer.h  protocol.h  rate_limiter.h
include/ubuntu/rpc/: auth_manager.h  blockchain_rpc.h  explorer_rpc.h  rpc_server.h  wallet_rpc.h
include/ubuntu/storage/: block_index.h  database.h  utxo_db.h
include/ubuntu/wallet/: wallet.h  wallet_encryption.h
proto/: network.proto
src/: cli.cpp  main.cpp
src/cli/: ubu-cli.cpp
src/config/: config.cpp
src/consensus/: chainparams.cpp  pow.cpp
src/core/: block.cpp  chain.cpp  merkle.cpp  transaction.cpp
src/crypto/: base58.cpp  hash.cpp  keys.cpp  signatures.cpp
src/daemon/: ubud.cpp
src/ledger/: ledger_adapter.cpp
src/mempool/: fee_estimator.cpp  mempool.cpp
src/metrics/: metrics.cpp
src/mining/: block_assembler.cpp
src/monetary/: oracle_stub.cpp  peg_cli.cpp  peg_controller.cpp  peg_state_serialization.cpp
src/network/: message_auth.cpp  network_manager.cpp  peer_manager.cpp  protocol.cpp  rate_limiter.cpp
src/rpc/: auth_manager.cpp  blockchain_rpc.cpp  rpc_server.cpp  wallet_rpc.cpp
src/storage/: block_index.cpp  database.cpp  utxo_db.cpp
src/wallet/: wallet.cpp  wallet_encryption.cpp
tests/: run_all_tests.sh
tests/benchmarks/: crypto_bench.cpp  database_bench.cpp  validation_bench.cpp
tests/integration/: peg_integration_test.cpp
tests/unit/: block_tests.cpp  consensus_tests.cpp  crypto_tests.cpp  mempool_tests.cpp  peg_controller_tests.cpp  transaction_tests.cpp
tools/: peg_simulator.cpp
